gen/androidpublisher/v3/cargo-errors.log
    Checking google-androidpublisher3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/androidpublisher/v3/lib)
error[E0609]: no field `request` on type `resources::edits::apks::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v3/lib/src/lib.rs:3347:67
     |
3347 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::bundles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v3/lib/src/lib.rs:3793:67
     |
3793 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::deobfuscationfiles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v3/lib/src/lib.rs:4127:67
     |
4127 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::expansionfiles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v3/lib/src/lib.rs:5785:67
     |
5785 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::images::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v3/lib/src/lib.rs:6942:67
     |
6942 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::internalappsharingartifacts::UploadapkRequestBuilder<'a, A>`
     --> androidpublisher/v3/lib/src/lib.rs:10468:63
      |
10468 |                 let request_json = ::serde_json::to_vec(&self.request)?;
      |                                                               ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::internalappsharingartifacts::UploadbundleRequestBuilder<'a, A>`
     --> androidpublisher/v3/lib/src/lib.rs:10689:63
      |
10689 |                 let request_json = ::serde_json::to_vec(&self.request)?;
      |                                                               ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-androidpublisher3`.

To learn more, run the command again with --verbose.
